<resources>
    <string name="app_name">PowerPermission</string>
    <string name="permission_all_granted">All Permissions %s are granted.</string>
    <string name="permission_denied">These Permissions %s are denied.</string>
    <string name="permission_rational">These Permissions %s are needed for some reasons.</string>
    <string name="button_request_activity">Request Activity Permission</string>
    <string name="button_request_fragment">Request Fragment Permission</string>
    <string name="button_request_child_fragment">Request Child Fragment Permission</string>
    <string name="button_request_rxjava2">Request with Rxjava2</string>
    <string name="button_request_rxjava3">Request with Rxjava3</string>
    <string name="button_request_coroutines">Request with Coroutines</string>
    <string name="button_request_livedata">Request with Livedata</string>
    <string name="rational_title">Permission rational title</string>
    <string name="button_request">Request Permission</string>
    <string name="button_request_rx_binding">RxBinding Request Permission</string>
</resources>
