<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/request_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_request_activity"
        app:layout_constraintBottom_toTopOf="@+id/request_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/request_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_request_fragment"
        app:layout_constraintBottom_toTopOf="@+id/request_child_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_activity" />

    <Button
        android:id="@+id/request_child_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_request_child_fragment"
        app:layout_constraintBottom_toTopOf="@+id/request_rxjava2_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_fragment" />


    <Button
        android:id="@+id/request_rxjava2_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_request_rxjava2"
        app:layout_constraintBottom_toTopOf="@+id/request_rxjava3_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_child_fragment" />

    <Button
        android:id="@+id/request_rxjava3_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_request_rxjava3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_rxjava2_activity" />

    <FrameLayout
        android:id="@+id/example_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>